feat: backported to jdk-11